--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 body{
     background-color: #314CB6;
+    background-image: url('watercolour-1325656_1920.jpg');
 }
 .name{
     justify-content: center;
@@ -11,6 +12,7 @@ body{
     margin: auto;
     color: white;
     font-size: 30px;
+    font-family: 'Libre Barcode 39 Extended Text', cursive;
 }
 .quote{
   justify-content: center;
@@ -23,7 +25,6 @@ body{
     justify-content: center;
     align-content: center;
     margin: auto;
-
 
 }
 .search input{
