--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
   margin: auto;
   color: white;
   font-size: 15px;
+  font-family: 'Courgette', cursive;
 }
 .search{
     justify-content: center;
@@ -32,8 +33,24 @@ body{
   width: 700px;
 }
 .button{
-  font-size: 19px;
+  font-size: 21px;
 }
 .button:active{
   transform: translateY(4px);
+}
+
+.signup {
+padding: 0.05px;
+display:block;
+background-color: white;
+color: white;
+text-align:center;
+position: absolute;
+top: 5px;
+right: 5px;
+}
+
+img{
+  height: 60px;
+  width: 300px;
 }
