--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/my-style-dir/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
@@ -18,18 +18,21 @@
         </div>
 </br></br></br></br>
         <br>
+        <form method='post' action='/'>
         <div class="search">
-            <input type="text" placeholder="Search...">
-            <button class="button"><i class="fas fa-search"></i></button>
+            <input type="text" placeholder="Search..." name="query">
+            <button class="button" type="submit"><i class="fas fa-search"></i></button>
         </br>
         </div>
+        </form>
         <div class="quote">
 
           <h2>Save your Money NOW<h2>
           <h3>Find the BEST deals & Shop Cheap!<h3>
         </div>
         <div class="signup">
-          <img src="https://cdn.techinasia.com/wp-content/uploads/2016/04/good-log-in-register.png" alt="button">
+          <button class="sign-up">Sign Up</button>
+          <button class = 'log-in'>Login</button>
         </div>
 
 </body>
