--- a/my-style-dir/style.css
+++ b/my-style-dir/style.css
@@ -26,23 +26,31 @@ body{
     justify-content: center;
     align-content: center;
     margin: auto;
+    
 
+}
+form{
+  display: flex;
+  align-items: center;
 }
 .search input{
   height: 30px;
   width: 700px;
 }
 .button{
-  font-size: 21px;
+  border: none;
+  padding: 9.5px;
+  
 }
-.button:active{
-  transform: translateY(4px);
+.button:hover{
+  background-color: #71CC14;
+  
 }
 
 .signup {
 padding: 0.05px;
 display:block;
-background-color: white;
+
 color: white;
 text-align:center;
 position: absolute;
@@ -50,7 +58,11 @@ top: 5px;
 right: 5px;
 }
 
-img{
-  height: 60px;
-  width: 300px;
+.sign-up, .log-in{
+  padding: 15px;
+  margin-right: 10px;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  background-color: #71CC14
 }
