Added content in the results page

--- a/style.css
+++ b/style.css
@@ -36,3 +36,19 @@ body{
 .button:active{
   transform: translateY(4px);
 }
+.wrapper {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-gap: 10px;
+  background-color: #fff;
+  color: #444;
+
+}
+
+.box {
+  background-color: #444;
+  color: #;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 150%;
+}
