--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Results Page</title>
-    <link rel="stylesheet" href="my-style-dir/Results_style.css">
+    <link rel="stylesheet" href="../my-style-dir/Results_style.css">
   </head>
   <body>
     <div class = "container">
