--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Results Page</title>
-    <link rel="stylesheet" href="../my-style-dir/Results_style.css">
+    <link rel="stylesheet" href="../my-style-dir/Display_Page.css">
   </head>
   <body>
 
@@ -11,6 +11,12 @@
   <a class="active" href="#home">Home</a>
   <a href="#explore">Explore</a>
   <a href="#about">About</a>
+
+  <form method='post' action='/'>
+  <div class="search">
+      <input type="text" placeholder="Search..." name="query">
+      <button class="button" type="submit"><i class="fas fa-search"></i></button>
+
 </div>
 
     <div class = "container">
