--- a/my-style-dir/Display_Page.css
+++ b/my-style-dir/Display_Page.css
@@ -22,3 +22,27 @@ body {
   padding: 20px;
   font-size: 150%;
 }
+
+.navigation {
+    background-color: #333;
+    overflow: hidden;
+}
+
+.navigation a {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navigation a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.navigation a.active {
+    background-color: blue;
+    color: white;
+}
