--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -4,11 +4,20 @@
     <meta charset="utf-8">
     <title>Results Page</title>
     <link rel="stylesheet" href="../my-style-dir/Display_Page.css">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
   </head>
   <body>
+    <div class = "container">
+    <div class = "wrapper">
+       <div class = "box A"></div>
+       <div class = "box B"></div>
+    </div>
+
 
     <div class="navigation">
-  <a class="active" href="#home">Home</a>
+      <div class="home_button">
+  <a class="active" href="#home">COMPARIFY</a>
+  </div>
   <a href="#explore">Explore</a>
   <a href="#about">About</a>
 
@@ -16,15 +25,16 @@
   <div class="search">
       <input type="text" placeholder="Search..." name="query">
       <button class="button" type="submit"><i class="fas fa-search"></i></button>
+    </br>
+    </div>
+    </form>
+    <div class="signup">
+      <button class="sign-up">Sign Up</button>
+      <button class = 'log-in'>Login</button>
+    </div>
 
 </div>
-
-    <div class = "container">
-    <div class = "wrapper">
-       <div class = "box A"></div>
-       <div class = "box B"></div>
-    </div>
-  </div>
+</div>
 
   </body>
 </html>
