--- a/my-style-dir/Display_Page.css
+++ b/my-style-dir/Display_Page.css
@@ -15,7 +15,7 @@ body {
   background-color: #fff;
   color: #444;
   align-content: center;
-  top: 10%;
+  top: ;
 
 
 }
@@ -27,84 +27,3 @@ body {
   padding: 20px;
   font-size: 150%;
 }
-
-.navigation {
-    background-color: #333;
-    overflow: hidden;
-}
-
-.navigation a {
-    float: left;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.navigation a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.navigation a.active {
-    background-color: blue;
-    color: white;
-}
-
-.active{
-  font-family: 'Libre Barcode 39 Extended Text', cursive;
-}
-
-.home_button a {
-  font-size: 30px;
-}
-
-.search{
-    justify-content: center;
-    align-content: center;
-    margin: auto;
-    text-align:center;
-    position: absolute;
-    top: 50px;
-    right: 15px;
-    left: 10px;
-
-
-}
-form{
-  display: flex;
-  align-items: center;
-}
-.search input{
-  height: 30px;
-  width: 500px;
-}
-.button{
-  border: none;
-  padding: 9.5px;
-
-}
-/* .button:hover{
-  background-color: #71CC14;
-} */
-
-  .signup {
-  padding: 0.05px;
-  display:block;
-
-  color: white;
-  text-align:center;
-  position: absolute;
-  top: 50px;
-  right: 45px;
-  }
-
-  .sign-up, .log-in{
-    padding: 10px;
-    margin-right: 10px;
-    color: white;
-    border-radius: 100px;
-    border: none;
-    background-color: #71CC14
-  }
