--- a/my-style-dir/Display_Page.css
+++ b/my-style-dir/Display_Page.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: column wrap;
 }
+
 body {
   margin: 40px;
 }
@@ -15,13 +16,13 @@ body {
   color: #444;
 }
 
-.box {
+/* .box_A {
   background-color: #444;
   color: #fff;
   border-radius: 5px;
   padding: 20px;
   font-size: 150%;
-}
+} */
 
 .navigation {
     background-color: #333;
@@ -80,9 +81,9 @@ form{
   padding: 9.5px;
 
 }
-/* .button:hover{
+.button:hover{
   background-color: #71CC14;
-} */
+}
 
   .signup {
   padding: 0.05px;
