--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -7,12 +7,13 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
   </head>
   <body>
-    <div class = "container">
+
+    <!-- <div class = "container">
     <div class = "wrapper">
        <div class = "box A"></div>
        <div class = "box B"></div>
     </div>
-
+    </div> -->
 
     <div class="navigation">
       <div class="home_button">
@@ -34,7 +35,7 @@
     </div>
 
 </div>
-</div>
+
 
   </body>
 </html>
