--- a/my-style-dir/Display_Page.css
+++ b/my-style-dir/Display_Page.css
@@ -27,6 +27,9 @@ body {
 .navigation {
     background-color: #333;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
+
 }
 
 .navigation a {
@@ -41,6 +44,7 @@ body {
 .navigation a:hover {
     background-color: #ddd;
     color: black;
+
 }
 
 .navigation a.active {
@@ -81,9 +85,9 @@ form{
   padding: 9.5px;
 
 }
-.button:hover{
+/* .button:hover{
   background-color: #71CC14;
-}
+} */
 
   .signup {
   padding: 0.05px;
