Added boxes in the results page

--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -4,26 +4,9 @@
     <meta charset="utf-8">
     <title>Results Page</title>
     <link rel="stylesheet" href="../my-style-dir/Display_Page.css">
-<<<<<<< HEAD
+      <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
   </head>
   <body>
-
-    <div class="navigation">
-  <a class="active" href="#home">Home</a>
-  <a href="#explore">Explore</a>
-  <a href="#about">About</a>
- </div>
-
-=======
-    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
-  </head>
-  <body>
->>>>>>> 7c957542184f8556f3e1ce65635caa5382fbdd45
-    <div class = "container">
-    <div class = "wrapper">
-       <div class = "box A"></div>
-       <div class = "box B"></div>
-    </div>
 
 
     <div class="navigation">
@@ -35,7 +18,7 @@
 
   <form method='post' action='/'>
   <div class="search">
-      <input type="text" placeholder="Search..." name="query">
+      <input type="text" placeholder="Search..." name="query" align = "top">
       <button class="button" type="submit"><i class="fas fa-search"></i></button>
     </br>
     </div>
@@ -44,9 +27,15 @@
       <button class="sign-up">Sign Up</button>
       <button class = 'log-in'>Login</button>
     </div>
+</div>
+</div>
 
 </div>
+<div class="wrapper">
+  <div class="box a">A</div>
+  <div class="box b">B</div>
 </div>
+
 
   </body>
 </html>
