updated navigation bar

--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -20,7 +20,7 @@
   <a class="active" href="#home">COMPARIFY</a>
   </div>
   <a href="#explore">Explore</a>
-  <a href="#about">About</a>
+  <a href="#watchlist">WatchList</a>
 
   <form method='post' action='/'>
   <div class="search">
