--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -31,8 +31,8 @@
 
 </div>
 <div class="wrapper">
-  <div class="box a">A</div>
-  <div class="box b">B</div>
+  <div class="box a"></div>
+  <div class="box b"></div>
 </div>
 
 
