--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Results Page</title>
-    <link rel="stylesheet" href="../my-style-dir/Display_Page.css">
-      <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
-  </head>
-  <body>
 
-    <div class="navigation">
-      <div class="home_button">
-  <a class="active" href="#home">COMPARIFY</a>
+<head>
+  <meta charset="utf-8">
+  <title>Results Page</title>
+  <link rel="stylesheet" href="../my-style-dir/Display_Page.css">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+</head>
+
+<body>
+
+  <div class="navigation">
+    <div class="home_button">
+      <a class="active" href="index.html">COMPARIFY</a>
+
+      <form method='post' action='/'>
+        <div class="search">
+          <input type="text" placeholder="Search..." name="query" align="top">
+          <button class="button" type="submit">
+            <i class="fas fa-search"></i>
+          </button>
+          </br>
+        </div>
+      </form>
+      <div class="signup">
+        <button class="sign-up">Sign Up</button>
+        <button class='log-in'>Login</button>
+      </div>
+    </div>
+
+
+    
+
   </div>
-  <a href="#explore">Explore</a>
-  <a href="#watchlist">WatchList</a>
-
-  <form method='post' action='/'>
-  <div class="search">
-      <input type="text" placeholder="Search..." name="query" align = "top">
-      <button class="button" type="submit"><i class="fas fa-search"></i></button>
-    </br>
-    </div>
-    </form>
-    <div class="signup">
-      <button class="sign-up">Sign Up</button>
-      <button class = 'log-in'>Login</button>
-    </div>
-</div>
-</div>
-
-</div>
-<div class="wrapper">
-  <div class="box a"></div>
-  <div class="box b"></div>
-</div>
+  <div class="wrapper">
+    <div class="box a"></div>
+    <div class="box b"></div>
+  </div>
 
 
-  </body>
+</body>
+
 </html>
