--- a/my-style-dir/Display_Page.css
+++ b/my-style-dir/Display_Page.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  margin: 40px;
+  margin: 0;
 }
 
 
@@ -18,9 +18,12 @@ body {
 
 .navigation {
     background-color: #333;
-    overflow: hidden;
+    
     margin: 0;
     padding: 0;
+    width: 100%;
+    height:60px;
+    margin-bottom: 40px;
 
 }
 
@@ -58,7 +61,7 @@ body {
     margin: auto;
     text-align:center;
     position: absolute;
-    top: 50px;
+    top: 10px;
     right: 15px;
     left: 100px;
 
@@ -67,6 +70,7 @@ body {
 form{
   display: flex;
   align-items: center;
+
 }
 .search input{
   height: 30px;
@@ -77,9 +81,9 @@ form{
   padding: 9.5px;
 
 }
-/* .button:hover{
+.button:hover{
   background-color: #71CC14;
-} */
+}
 
   .signup {
   padding: 0.05px;
@@ -88,7 +92,7 @@ form{
   color: white;
   text-align:center;
   position: absolute;
-  top: 50px;
+  top: 10px;
   right: 45px;
   }
 
@@ -104,10 +108,11 @@ form{
   .wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 500px 500px;
-  grid-gap: 10px;
+  grid-template-rows: 500px ;
+  grid-gap: 50px;
   background-color: #fff;
   color: #444;
+  margin: 0 80px
 
 }
 
