Added fields for API data

--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -35,8 +35,32 @@
 
   </div>
   <div class="wrapper">
-    <div class="box a"></div>
-    <div class="box b"></div>
+    <div class="box a">
+      <img src={{image}} alt="">
+      <div class="name">
+        <h1>{{Name}}</h1>
+      </div>
+      <div class="description">
+        <h1>{{descriptsion}}</h1>
+      </div>
+      <div class="price">
+        <h1>{{price}}</h1>
+      </div>
+      <button>Buy Now</button>
+    </div>
+    <div class="box b">
+      <img src={{image}} alt="">
+      <div class="name">
+        <h1>{{Name}}</h1>
+      </div>
+      <div class="description">
+        <h1>{{descriptsion}}</h1>
+      </div>
+      <div class="price">
+        <h1>{{price}}</h1>
+      </div>
+      <button>Buy Now</button>
+    </div>
   </div>
 
 
