--- a/my-style-dir/Display_Page.css
+++ b/my-style-dir/Display_Page.css
@@ -120,7 +120,8 @@ form{
   background-color: #abb0d5;
   color: #fff;
   border-radius: 5px;
-  padding: 200px;
+  padding: 20px;
   font-size: 150%;
+  text-align: center;
 
 }
