--- a/my-style-dir/Display_Page.css
+++ b/my-style-dir/Display_Page.css
@@ -19,9 +19,6 @@ body {
 .navigation {
     background-color: #333;
     overflow: hidden;
-    margin: 0;
-    padding: 0;
-
 }
 
 .navigation a {
@@ -36,7 +33,6 @@ body {
 .navigation a:hover {
     background-color: #ddd;
     color: black;
-
 }
 
 .navigation a.active {
@@ -77,9 +73,9 @@ form{
   padding: 9.5px;
 
 }
-/* .button:hover{
+.button:hover{
   background-color: #71CC14;
-} */
+}
 
   .signup {
   padding: 0.05px;
@@ -111,7 +107,7 @@ form{
 }
 
 .box {
-  background-color: #444;
+  background-color: #abb0d5;
   color: #fff;
   border-radius: 5px;
   padding: 20px;
