--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+<script src="script.js"></script>
 
   <div class="navigation">
     <div class="home_button">
@@ -31,7 +32,7 @@
     </div>
 
 
-    
+
 
   </div>
   <div class="wrapper">
