--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="/my-style-dir/style.css">
+    <link rel="stylesheet" type="text/css" href="../my-style-dir/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
@@ -33,6 +33,22 @@
         <div class="signup">
           <button class="sign-up">Sign Up</button>
           <button class = 'log-in'>Login</button>
+        </div>
+        <div class = "box">
+          <a align = "center"><h2>Top 10 searches</h2></a>
+          <div class = "wrapper">
+          <div class = "gridbox 1">1</div>
+          <div class = "gridbox 2">2</div>
+          <div class = "gridbox 3">3</div>
+          <div class = "gridbox 4">4</div>
+          <div class = "gridbox 5">5</div>
+          <div class = "gridbox 5">5</div>
+          <div class = "gridbox 6">6</div>
+          <div class = "gridbox 7">7</div>
+          <div class = "gridbox 8">8</div>
+          <div class = "gridbox 9">9</div>
+          <div class = "gridbox 10">10</div>
+          </div>
         </div>
 
 </body>
