Added code to inject data from Ebay API into HTML

--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -13,7 +13,7 @@
 
   <div class="navigation">
     <div class="home_button">
-      <a class="active" href="index.html">COMPARIFY</a>
+      <a class="active" href="/home">COMPARIFY</a>
 
       <form method='post' action='/'>
         <div class="search">
@@ -49,15 +49,15 @@
       <button>Buy Now</button>
     </div>
     <div class="box b">
-      <img src={{image}} alt="">
+      <img src={{ebay_image}} alt="">
       <div class="name">
-        <h1>{{name}}</h1>
+        <h1>{{ebay_name}}</h1>
       </div>
       <div class="description">
         <h1>{{description}}</h1>
       </div>
       <div class="price">
-        <h1>{{price}}</h1>
+        <h1>{{ebay_price}}</h1>
       </div>
       <button>Buy Now</button>
     </div>
