Added highlight to the lower price

--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -43,7 +43,7 @@
       <div class="description">
         <h1>{{description}}</h1>
       </div>
-      <div class="price">
+      <div id = "price" class="price">
         <h1>{{price}}</h1>
       </div>
       <button>Buy Now</button>
@@ -56,7 +56,7 @@
       <div class="description">
         <h1>{{description}}</h1>
       </div>
-      <div class="price">
+      <div id ="price" class="price">
         <h1>{{price}}</h1>
       </div>
       <button>Buy Now</button>
