--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../my-style-dir/Display_Page.css">
   <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  
 </head>
 
 <body>
@@ -44,9 +45,9 @@
         <h1>{{description}}</h1>
       </div>
       <div id = "price" class="price">
-        <h1>{{price}}</h1>
+        <h1>Price: ${{price}}</h1>
       </div>
-      <button>Buy Now</button>
+      <button class='buyButton'>Buy Now</button>
     </div>
     <div class="box b">
       <img src={{ebay_image}} alt="">
@@ -56,19 +57,17 @@
       <div class="description">
         <h1>{{description}}</h1>
       </div>
-<<<<<<< HEAD
-      <div id ="price" class="price">
-        <h1>{{price}}</h1>
-=======
-      <div class="price">
-        <h1>{{ebay_price}}</h1>
->>>>>>> 5670d95f7ea116b204923460a052949341f41d34
+
+
+      <div class="price" id = 'ebayPrice'>
+        <h1>Price: ${{ebay_price}}</h1>
+
       </div>
-      <button>Buy Now</button>
+      <button class='buyButton'>Buy Now</button>
     </div>
   </div>
 
-
+  <script src="C:\Users\Ariel Moskowitz\Desktop\Comparify\Templates\script.js"></script>
 </body>
 
 </html>
