--- a/my-style-dir/Display_Page.css
+++ b/my-style-dir/Display_Page.css
@@ -96,7 +96,7 @@ form{
   right: 45px;
   }
 
-  .sign-up, .log-in{
+  .sign-up, .log-in, .buyButton{
     padding: 10px;
     margin-right: 10px;
     color: white;
@@ -125,9 +125,20 @@ form{
   text-align: center;
 
 }
-h1{
-  font-size: 10px;
-}
+
 .hightlight{
   background-color: yellow;
+}
+img{
+  height: 200px;
+  width: 150px
+}
+.name{
+  font-size: 10px;
+}
+.description{
+  font-size: 8px;
+}
+.price{
+  font-size: 10px;
 }
