--- a/Templates/Display_Page.html
+++ b/Templates/Display_Page.html
@@ -37,6 +37,7 @@
   </div>
   <div class="wrapper">
     <div class="box a">
+      <div class="walmart"><h1>Walmart</h1></div>
       <img src={{image}} alt="">
       <div class="name">
         <h1>{{name}}</h1>
@@ -50,6 +51,7 @@
       <button class='buyButton'>Buy Now</button>
     </div>
     <div class="box b">
+      <div class="ebay"><h1>Ebay</h1></div>
       <img src={{ebay_image}} alt="">
       <div class="name">
         <h1>{{ebay_name}}</h1>
